# wayland_learn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cmake  demo.c  main.c  surface3.c  window.c
Wayland_Freshman-main/08.06.interface/: registory
Wayland_Freshman-main/08.07.shell/: stable  stable.c
Wayland_Freshman-main/08.08.window/: window  window_egl
Wayland_Freshman-main/08.10.pointer/: point  point_egl
Wayland_Freshman-main/08.14.keyboard/: keyboard.c
examples/: CMakeLists.txt  connection.c  damage.c  demo.c  surface.c  surface2.c  surface3.c
hello-wayland-master/: clean.sh  hello.c  meson.build  run.sh
inc/: listeners.h  utils.h  xdg-shell-client-protocol.h  xdg-shell-server-protocol.h
inc/core/: defs.h
proto/: xdg-shell-client-protocol.cpp  xdg-shell-client-protocol.h  xdg-shell-server-protocol.cpp  xdg-shell-server-protocol.h
proto/tools/: qtwaylandscanner  wayland-scanner
src/: utils.c
tests/: CMakeLists.txt  demo.cpp
